# dns-query-parser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: runner.rs
src/: host_entry.rs  lib.rs  tcping.rs
src/dns_query/: dns_query_0_header.rs  dns_query_1_question.rs  dns_query_2_resource_record.rs  dns_query_struct.rs  mod.rs  utils.rs
